--- a/index.html
+++ b/index.html
@@ -18,44 +18,44 @@
           <h2>Coffee</h2>
           <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon"/>
           <article class="item">
-            <p class="flavor">French Vanilla</p><p class="price">3.00</p>
+            <p class="flavor">French Vanilla</p><p class="price">Rs.50</p>
           </article>
           <article class="item">
-            <p class="flavor">Caramel Macchiato</p><p class="price">3.75</p>
+            <p class="flavor">Caramel Macchiato</p><p class="price">Rs.60</p>
           </article>
           <article class="item">
-            <p class="flavor">Pumpkin Spice</p><p class="price">3.50</p>
+            <p class="flavor">Pumpkin Spice</p><p class="price">Rs.60</p>
           </article>
           <article class="item">
-            <p class="flavor">Hazelnut</p><p class="price">4.00</p>
+            <p class="flavor">Hazelnut</p><p class="price">Rs.70</p>
           </article>
           <article class="item">
-            <p class="flavor">Mocha</p><p class="price">4.50</p>
+            <p class="flavor">Mocha</p><p class="price">Rs.75</p>
           </article>
         </section>
         <section>
           <h2>Desserts</h2>
           <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg" alt="pie icon"/>
           <article class="item">
-            <p class="dessert">Donut</p><p class="price">1.50</p>
+            <p class="dessert">Donut</p><p class="price">Rs.30</p>
           </article>
           <article class="item">
-            <p class="dessert">Cherry Pie</p><p class="price">2.75</p>
+            <p class="dessert">Cherry Pie</p><p class="price">Rs.35</p>
           </article>
           <article class="item">
-            <p class="dessert">Cheesecake</p><p class="price">3.00</p>
+            <p class="dessert">Cheesecake</p><p class="price">Rs.40</p>
           </article>
           <article class="item">
-            <p class="dessert">Cinnamon Roll</p><p class="price">2.50</p>
+            <p class="dessert">Cinnamon Roll</p><p class="price">Rs.50</p>
           </article>
         </section>
       </main>
       <hr class="bottom-line">
       <footer>
         <p>
-          <a href="https://www.freecodecamp.org" target="_blank">Visit our website</a>
+          <a href="https://cafe-menu-design.web.app/" target="_blank">Visit our website</a>
         </p>
-        <p class="address">123 Free Code Camp Drive</p>
+        <p class="address">Baker Street, Magic Town</p>
       </footer>
     </div>
   </body>
